Fixed show more on events & removed arrangementer_front_block on mobile.

--- a/less/overrides.less
+++ b/less/overrides.less
@@ -1056,6 +1056,9 @@ min-height: 100px !important;
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
+    .arrangementer_front_block {
+        display: none;
+    }
     #search_input_wrapper {
         width: 100%;
     }
